@@ -3,7 +3,8 @@ Changelog of EntityPolice
 
 V1.0.0
 - first overhauled version by CubieX
+- added "list" command to scan mobs for ALL players in specified radius and list them by player
 - Updated for CB 1.4.6-R0.3
 
 V0.2.1
-- orogonal version from PotatoFarms
+- original version from PotatoFarms
